# phonetic-code

./: .gitignore  EditDistance.hs  Phonix.hs  README.md  Soundex.hi  Soundex.hs  phonetic-code.cabal  thimk.cabal  thimk.hs
Text/PhoneticCode/: Phonix.hs  Soundex.hs
