name: thimk
version: 0.1
cabal-version: >= 1.2
build-type: Simple
license: BSD3
license-file: COPYING
copyright: Copyright © 2008 Bart Massey
author: Bart Massey
maintainer: bart@cs.pdx.edu
stability: alpha
homepage: http://wiki.cs.pdx.edu/bartforge/thimk
package-url: http://wiki.cs.pdx.edu/cabal-packages/thimk-0.1.tar.gz
synopsis: Command-line spelling word suggestion tool
description: 

    "thimk" (an old joke) is a command-line spelling word
    suggestion tool.  You give it a possibly-misspelled word,
    and it spits out one or more properly-spelled words in order
    of likelihood of similarity.

    The idea and name for thimk came from an old program that used to hang
    around Reed College, probably written by Graham Ross and
    now apparently lost in the mists of time.
    See
	http://groups.google.com/group/net.sources/msg/8856593862fe22bd
    for the one very vague reference I've found on the web (in the
    SEE ALSO section of the referenced manpage).

    The current implementation is a bit more sophisticated
    than I recall the original being. By
    default it uses a prefilter that discards words with
    large edit distances from the target, then filters words
    with a different phonetic code than the target, then
    presents the top result sorted by edit distance.

    The Soundex and Phonix phonetic codes are designed for
    names, but seem to work about the same with other words.
    I follow the common practice of not truncating the codes
    for greater precision, although Phonix does truncate its
    final "sound" for greater recall.

category: Console, Text
tested-with: ghc-6.8.2
data-files: thimk-db, thimk-dict

main-is: thimk.hs
build-depends: base, containers, parseargs >= 0.1.1,
               edit-distance >= 0.1, phonetic-code >= 0.1
